Fix setting textContent to empty string

Fix setting textContent to empty string, when setting
textContent to empty string we are supposed to remove
all element text children [1].

Behavior matches Firefox and Safari.

BUG=651744

[1] https://dom.spec.whatwg.org/#dom-node-textcontent

Review-Url: https://codereview.chromium.org/2415923003
Cr-Commit-Position: refs/heads/master@{#425453}

Former-commit-id: 682e51aaa07cf4e7d1632496d39236b70933ef2d